--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -193,6 +193,7 @@
 							<strong>Lugar / plataforma: </strong>
 							<span>UDEMY</span>
 							<ul>
+								<li>Create web app with Angular 12, .NET Core Web API & MySQL</li>
 								<li>Angular 13 - La Guia Completa + 15 Proyectos</li>
 							</ul>
 						</div>
@@ -205,7 +206,6 @@
 							<span>UBITS</span>
 							<ul>
 								<li>Phyton desde cero</li>
-								
 							</ul>
 						</div>
 					</div>
@@ -227,7 +227,7 @@
 			</ul>
 		</div>
 		<div fxLayoutAlign="end end">
-			<small>última actualización: 2022-07-15</small>
+			<small>última actualización: 2022-08-01</small>
 		</div>
 	</div>
 </div>
